name:                boring-crypto
version:             0.1.0.0
synopsis:            The dull crypto library
-- description:         
license:             MIT
license-file:        LICENSE
author:              Patrick Chilton
maintainer:          chpatrick@gmail.com
-- copyright:           
category:            Cryptography
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Crypto.Boring.Digest     
                       Crypto.Boring.Exception
                       Crypto.Boring.Symmetric
                       Crypto.Boring.Random
  other-modules:       Crypto.Boring.Internal.Context
                       Crypto.Boring.Internal.Prelude
                       Crypto.Boring.Internal.Util
  -- other-extensions:    
  build-depends:       base >=4.9 && <4.11,
                       conduit,
                       inline-c >= 0.6.0.5,
                       bytestring,
                       mtl,
                       containers,
                       resourcet,
                       tagged,
                       safe-exceptions
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall -O
  default-extensions:  TemplateHaskell
                       FlexibleContexts
                       OverloadedStrings
                       QuasiQuotes
                       ScopedTypeVariables
                       TypeApplications
                       KindSignatures
                       DataKinds
                       LambdaCase
                       RankNTypes
  include-dirs: cbits/src/include
  if os(linux) || os(darwin)
    cc-options: -Wall -Werror -Wformat=2 -Wsign-compare -Wmissing-field-initializers -Wwrite-strings
  -- generated by update-cbits.hs:
  c-sources:
    cbits/err_data.c
    cbits/src/crypto/asn1/a_bitstr.c
    cbits/src/crypto/asn1/a_bool.c
    cbits/src/crypto/asn1/a_d2i_fp.c
    cbits/src/crypto/asn1/a_dup.c
    cbits/src/crypto/asn1/a_enum.c
    cbits/src/crypto/asn1/a_gentm.c
    cbits/src/crypto/asn1/a_i2d_fp.c
    cbits/src/crypto/asn1/a_int.c
    cbits/src/crypto/asn1/a_mbstr.c
    cbits/src/crypto/asn1/a_object.c
    cbits/src/crypto/asn1/a_octet.c
    cbits/src/crypto/asn1/a_print.c
    cbits/src/crypto/asn1/a_strnid.c
    cbits/src/crypto/asn1/a_time.c
    cbits/src/crypto/asn1/a_type.c
    cbits/src/crypto/asn1/a_utctm.c
    cbits/src/crypto/asn1/a_utf8.c
    cbits/src/crypto/asn1/asn1_lib.c
    cbits/src/crypto/asn1/asn1_par.c
    cbits/src/crypto/asn1/asn_pack.c
    cbits/src/crypto/asn1/f_enum.c
    cbits/src/crypto/asn1/f_int.c
    cbits/src/crypto/asn1/f_string.c
    cbits/src/crypto/asn1/tasn_dec.c
    cbits/src/crypto/asn1/tasn_enc.c
    cbits/src/crypto/asn1/tasn_fre.c
    cbits/src/crypto/asn1/tasn_new.c
    cbits/src/crypto/asn1/tasn_typ.c
    cbits/src/crypto/asn1/tasn_utl.c
    cbits/src/crypto/asn1/time_support.c
    cbits/src/crypto/base64/base64.c
    cbits/src/crypto/bio/bio.c
    cbits/src/crypto/bio/bio_mem.c
    cbits/src/crypto/bio/connect.c
    cbits/src/crypto/bio/fd.c
    cbits/src/crypto/bio/file.c
    cbits/src/crypto/bio/hexdump.c
    cbits/src/crypto/bio/pair.c
    cbits/src/crypto/bio/printf.c
    cbits/src/crypto/bio/socket.c
    cbits/src/crypto/bio/socket_helper.c
    cbits/src/crypto/bn_extra/bn_asn1.c
    cbits/src/crypto/bn_extra/convert.c
    cbits/src/crypto/buf/buf.c
    cbits/src/crypto/bytestring/asn1_compat.c
    cbits/src/crypto/bytestring/ber.c
    cbits/src/crypto/bytestring/cbb.c
    cbits/src/crypto/bytestring/cbs.c
    cbits/src/crypto/chacha/chacha.c
    cbits/src/crypto/cipher_extra/cipher_extra.c
    cbits/src/crypto/cipher_extra/derive_key.c
    cbits/src/crypto/cipher_extra/e_aesctrhmac.c
    cbits/src/crypto/cipher_extra/e_aesgcmsiv.c
    cbits/src/crypto/cipher_extra/e_chacha20poly1305.c
    cbits/src/crypto/cipher_extra/e_null.c
    cbits/src/crypto/cipher_extra/e_rc2.c
    cbits/src/crypto/cipher_extra/e_rc4.c
    cbits/src/crypto/cipher_extra/e_ssl3.c
    cbits/src/crypto/cipher_extra/e_tls.c
    cbits/src/crypto/cipher_extra/tls_cbc.c
    cbits/src/crypto/cmac/cmac.c
    cbits/src/crypto/conf/conf.c
    cbits/src/crypto/cpu-aarch64-linux.c
    cbits/src/crypto/cpu-arm-linux.c
    cbits/src/crypto/cpu-arm.c
    cbits/src/crypto/cpu-intel.c
    cbits/src/crypto/cpu-ppc64le.c
    cbits/src/crypto/crypto.c
    cbits/src/crypto/curve25519/curve25519.c
    cbits/src/crypto/curve25519/spake25519.c
    cbits/src/crypto/curve25519/x25519-x86_64.c
    cbits/src/crypto/dh/check.c
    cbits/src/crypto/dh/dh.c
    cbits/src/crypto/dh/dh_asn1.c
    cbits/src/crypto/dh/params.c
    cbits/src/crypto/digest_extra/digest_extra.c
    cbits/src/crypto/dsa/dsa.c
    cbits/src/crypto/dsa/dsa_asn1.c
    cbits/src/crypto/ec_extra/ec_asn1.c
    cbits/src/crypto/ecdh/ecdh.c
    cbits/src/crypto/ecdsa_extra/ecdsa_asn1.c
    cbits/src/crypto/engine/engine.c
    cbits/src/crypto/err/err.c
    cbits/src/crypto/evp/digestsign.c
    cbits/src/crypto/evp/evp.c
    cbits/src/crypto/evp/evp_asn1.c
    cbits/src/crypto/evp/evp_ctx.c
    cbits/src/crypto/evp/p_dsa_asn1.c
    cbits/src/crypto/evp/p_ec.c
    cbits/src/crypto/evp/p_ec_asn1.c
    cbits/src/crypto/evp/p_ed25519.c
    cbits/src/crypto/evp/p_ed25519_asn1.c
    cbits/src/crypto/evp/p_rsa.c
    cbits/src/crypto/evp/p_rsa_asn1.c
    cbits/src/crypto/evp/pbkdf.c
    cbits/src/crypto/evp/print.c
    cbits/src/crypto/evp/scrypt.c
    cbits/src/crypto/evp/sign.c
    cbits/src/crypto/ex_data.c
    cbits/src/crypto/fipsmodule/bcm.c
    cbits/src/crypto/fipsmodule/is_fips.c
    cbits/src/crypto/hkdf/hkdf.c
    cbits/src/crypto/lhash/lhash.c
    cbits/src/crypto/mem.c
    cbits/src/crypto/obj/obj.c
    cbits/src/crypto/obj/obj_xref.c
    cbits/src/crypto/pem/pem_all.c
    cbits/src/crypto/pem/pem_info.c
    cbits/src/crypto/pem/pem_lib.c
    cbits/src/crypto/pem/pem_oth.c
    cbits/src/crypto/pem/pem_pk8.c
    cbits/src/crypto/pem/pem_pkey.c
    cbits/src/crypto/pem/pem_x509.c
    cbits/src/crypto/pem/pem_xaux.c
    cbits/src/crypto/pkcs7/pkcs7.c
    cbits/src/crypto/pkcs7/pkcs7_x509.c
    cbits/src/crypto/pkcs8/p5_pbev2.c
    cbits/src/crypto/pkcs8/pkcs8.c
    cbits/src/crypto/pkcs8/pkcs8_x509.c
    cbits/src/crypto/poly1305/poly1305.c
    cbits/src/crypto/poly1305/poly1305_arm.c
    cbits/src/crypto/poly1305/poly1305_vec.c
    cbits/src/crypto/pool/pool.c
    cbits/src/crypto/rand_extra/deterministic.c
    cbits/src/crypto/rand_extra/forkunsafe.c
    cbits/src/crypto/rand_extra/fuchsia.c
    cbits/src/crypto/rand_extra/rand_extra.c
    cbits/src/crypto/rand_extra/windows.c
    cbits/src/crypto/rc4/rc4.c
    cbits/src/crypto/refcount_c11.c
    cbits/src/crypto/refcount_lock.c
    cbits/src/crypto/rsa_extra/rsa_asn1.c
    cbits/src/crypto/stack/stack.c
    cbits/src/crypto/thread.c
    cbits/src/crypto/thread_none.c
    cbits/src/crypto/thread_pthread.c
    cbits/src/crypto/thread_win.c
    cbits/src/crypto/x509/a_digest.c
    cbits/src/crypto/x509/a_sign.c
    cbits/src/crypto/x509/a_strex.c
    cbits/src/crypto/x509/a_verify.c
    cbits/src/crypto/x509/algorithm.c
    cbits/src/crypto/x509/asn1_gen.c
    cbits/src/crypto/x509/by_dir.c
    cbits/src/crypto/x509/by_file.c
    cbits/src/crypto/x509/i2d_pr.c
    cbits/src/crypto/x509/rsa_pss.c
    cbits/src/crypto/x509/t_crl.c
    cbits/src/crypto/x509/t_req.c
    cbits/src/crypto/x509/t_x509.c
    cbits/src/crypto/x509/t_x509a.c
    cbits/src/crypto/x509/x509.c
    cbits/src/crypto/x509/x509_att.c
    cbits/src/crypto/x509/x509_cmp.c
    cbits/src/crypto/x509/x509_d2.c
    cbits/src/crypto/x509/x509_def.c
    cbits/src/crypto/x509/x509_ext.c
    cbits/src/crypto/x509/x509_lu.c
    cbits/src/crypto/x509/x509_obj.c
    cbits/src/crypto/x509/x509_r2x.c
    cbits/src/crypto/x509/x509_req.c
    cbits/src/crypto/x509/x509_set.c
    cbits/src/crypto/x509/x509_trs.c
    cbits/src/crypto/x509/x509_txt.c
    cbits/src/crypto/x509/x509_v3.c
    cbits/src/crypto/x509/x509_vfy.c
    cbits/src/crypto/x509/x509_vpm.c
    cbits/src/crypto/x509/x509cset.c
    cbits/src/crypto/x509/x509name.c
    cbits/src/crypto/x509/x509rset.c
    cbits/src/crypto/x509/x509spki.c
    cbits/src/crypto/x509/x_algor.c
    cbits/src/crypto/x509/x_all.c
    cbits/src/crypto/x509/x_attrib.c
    cbits/src/crypto/x509/x_crl.c
    cbits/src/crypto/x509/x_exten.c
    cbits/src/crypto/x509/x_info.c
    cbits/src/crypto/x509/x_name.c
    cbits/src/crypto/x509/x_pkey.c
    cbits/src/crypto/x509/x_pubkey.c
    cbits/src/crypto/x509/x_req.c
    cbits/src/crypto/x509/x_sig.c
    cbits/src/crypto/x509/x_spki.c
    cbits/src/crypto/x509/x_val.c
    cbits/src/crypto/x509/x_x509.c
    cbits/src/crypto/x509/x_x509a.c
    cbits/src/crypto/x509v3/pcy_cache.c
    cbits/src/crypto/x509v3/pcy_data.c
    cbits/src/crypto/x509v3/pcy_lib.c
    cbits/src/crypto/x509v3/pcy_map.c
    cbits/src/crypto/x509v3/pcy_node.c
    cbits/src/crypto/x509v3/pcy_tree.c
    cbits/src/crypto/x509v3/v3_akey.c
    cbits/src/crypto/x509v3/v3_akeya.c
    cbits/src/crypto/x509v3/v3_alt.c
    cbits/src/crypto/x509v3/v3_bcons.c
    cbits/src/crypto/x509v3/v3_bitst.c
    cbits/src/crypto/x509v3/v3_conf.c
    cbits/src/crypto/x509v3/v3_cpols.c
    cbits/src/crypto/x509v3/v3_crld.c
    cbits/src/crypto/x509v3/v3_enum.c
    cbits/src/crypto/x509v3/v3_extku.c
    cbits/src/crypto/x509v3/v3_genn.c
    cbits/src/crypto/x509v3/v3_ia5.c
    cbits/src/crypto/x509v3/v3_info.c
    cbits/src/crypto/x509v3/v3_int.c
    cbits/src/crypto/x509v3/v3_lib.c
    cbits/src/crypto/x509v3/v3_ncons.c
    cbits/src/crypto/x509v3/v3_pci.c
    cbits/src/crypto/x509v3/v3_pcia.c
    cbits/src/crypto/x509v3/v3_pcons.c
    cbits/src/crypto/x509v3/v3_pku.c
    cbits/src/crypto/x509v3/v3_pmaps.c
    cbits/src/crypto/x509v3/v3_prn.c
    cbits/src/crypto/x509v3/v3_purp.c
    cbits/src/crypto/x509v3/v3_skey.c
    cbits/src/crypto/x509v3/v3_sxnet.c
    cbits/src/crypto/x509v3/v3_utl.c
  if os(linux) && arch(aarch64)
    c-sources:
      cbits/linux-aarch64/crypto/chacha/chacha-armv8.S
      cbits/linux-aarch64/crypto/fipsmodule/aesv8-armx64.S
      cbits/linux-aarch64/crypto/fipsmodule/armv8-mont.S
      cbits/linux-aarch64/crypto/fipsmodule/ghashv8-armx64.S
      cbits/linux-aarch64/crypto/fipsmodule/sha1-armv8.S
      cbits/linux-aarch64/crypto/fipsmodule/sha256-armv8.S
      cbits/linux-aarch64/crypto/fipsmodule/sha512-armv8.S
  if os(linux) && arch(arm)
    c-sources:
      cbits/linux-arm/crypto/chacha/chacha-armv4.S
      cbits/linux-arm/crypto/fipsmodule/aes-armv4.S
      cbits/linux-arm/crypto/fipsmodule/aesv8-armx32.S
      cbits/linux-arm/crypto/fipsmodule/armv4-mont.S
      cbits/linux-arm/crypto/fipsmodule/bsaes-armv7.S
      cbits/linux-arm/crypto/fipsmodule/ghash-armv4.S
      cbits/linux-arm/crypto/fipsmodule/ghashv8-armx32.S
      cbits/linux-arm/crypto/fipsmodule/sha1-armv4-large.S
      cbits/linux-arm/crypto/fipsmodule/sha256-armv4.S
      cbits/linux-arm/crypto/fipsmodule/sha512-armv4.S
      cbits/src/crypto/curve25519/asm/x25519-asm-arm.S
      cbits/src/crypto/poly1305/poly1305_arm_asm.S
  if os(linux) && arch(ppc64le)
    c-sources:
      cbits/linux-ppc64le/crypto/fipsmodule/aesp8-ppc.S
      cbits/linux-ppc64le/crypto/fipsmodule/ghashp8-ppc.S
  if os(linux) && arch(x86)
    c-sources:
      cbits/linux-x86/crypto/chacha/chacha-x86.S
      cbits/linux-x86/crypto/fipsmodule/aes-586.S
      cbits/linux-x86/crypto/fipsmodule/aesni-x86.S
      cbits/linux-x86/crypto/fipsmodule/bn-586.S
      cbits/linux-x86/crypto/fipsmodule/co-586.S
      cbits/linux-x86/crypto/fipsmodule/ghash-x86.S
      cbits/linux-x86/crypto/fipsmodule/md5-586.S
      cbits/linux-x86/crypto/fipsmodule/sha1-586.S
      cbits/linux-x86/crypto/fipsmodule/sha256-586.S
      cbits/linux-x86/crypto/fipsmodule/sha512-586.S
      cbits/linux-x86/crypto/fipsmodule/vpaes-x86.S
      cbits/linux-x86/crypto/fipsmodule/x86-mont.S
  if os(linux) && arch(x86_64)
    c-sources:
      cbits/linux-x86_64/crypto/chacha/chacha-x86_64.S
      cbits/linux-x86_64/crypto/cipher_extra/aes128gcmsiv-x86_64.S
      cbits/linux-x86_64/crypto/cipher_extra/chacha20_poly1305_x86_64.S
      cbits/linux-x86_64/crypto/fipsmodule/aes-x86_64.S
      cbits/linux-x86_64/crypto/fipsmodule/aesni-gcm-x86_64.S
      cbits/linux-x86_64/crypto/fipsmodule/aesni-x86_64.S
      cbits/linux-x86_64/crypto/fipsmodule/bsaes-x86_64.S
      cbits/linux-x86_64/crypto/fipsmodule/ghash-x86_64.S
      cbits/linux-x86_64/crypto/fipsmodule/md5-x86_64.S
      cbits/linux-x86_64/crypto/fipsmodule/p256-x86_64-asm.S
      cbits/linux-x86_64/crypto/fipsmodule/rdrand-x86_64.S
      cbits/linux-x86_64/crypto/fipsmodule/rsaz-avx2.S
      cbits/linux-x86_64/crypto/fipsmodule/sha1-x86_64.S
      cbits/linux-x86_64/crypto/fipsmodule/sha256-x86_64.S
      cbits/linux-x86_64/crypto/fipsmodule/sha512-x86_64.S
      cbits/linux-x86_64/crypto/fipsmodule/vpaes-x86_64.S
      cbits/linux-x86_64/crypto/fipsmodule/x86_64-mont.S
      cbits/linux-x86_64/crypto/fipsmodule/x86_64-mont5.S
      cbits/src/crypto/curve25519/asm/x25519-asm-x86_64.S
  if os(darwin) && arch(x86)
    c-sources:
      cbits/mac-x86/crypto/chacha/chacha-x86.S
      cbits/mac-x86/crypto/fipsmodule/aes-586.S
      cbits/mac-x86/crypto/fipsmodule/aesni-x86.S
      cbits/mac-x86/crypto/fipsmodule/bn-586.S
      cbits/mac-x86/crypto/fipsmodule/co-586.S
      cbits/mac-x86/crypto/fipsmodule/ghash-x86.S
      cbits/mac-x86/crypto/fipsmodule/md5-586.S
      cbits/mac-x86/crypto/fipsmodule/sha1-586.S
      cbits/mac-x86/crypto/fipsmodule/sha256-586.S
      cbits/mac-x86/crypto/fipsmodule/sha512-586.S
      cbits/mac-x86/crypto/fipsmodule/vpaes-x86.S
      cbits/mac-x86/crypto/fipsmodule/x86-mont.S
  if os(darwin) && arch(x86_64)
    c-sources:
      cbits/mac-x86_64/crypto/chacha/chacha-x86_64.S
      cbits/mac-x86_64/crypto/cipher_extra/aes128gcmsiv-x86_64.S
      cbits/mac-x86_64/crypto/cipher_extra/chacha20_poly1305_x86_64.S
      cbits/mac-x86_64/crypto/fipsmodule/aes-x86_64.S
      cbits/mac-x86_64/crypto/fipsmodule/aesni-gcm-x86_64.S
      cbits/mac-x86_64/crypto/fipsmodule/aesni-x86_64.S
      cbits/mac-x86_64/crypto/fipsmodule/bsaes-x86_64.S
      cbits/mac-x86_64/crypto/fipsmodule/ghash-x86_64.S
      cbits/mac-x86_64/crypto/fipsmodule/md5-x86_64.S
      cbits/mac-x86_64/crypto/fipsmodule/p256-x86_64-asm.S
      cbits/mac-x86_64/crypto/fipsmodule/rdrand-x86_64.S
      cbits/mac-x86_64/crypto/fipsmodule/rsaz-avx2.S
      cbits/mac-x86_64/crypto/fipsmodule/sha1-x86_64.S
      cbits/mac-x86_64/crypto/fipsmodule/sha256-x86_64.S
      cbits/mac-x86_64/crypto/fipsmodule/sha512-x86_64.S
      cbits/mac-x86_64/crypto/fipsmodule/vpaes-x86_64.S
      cbits/mac-x86_64/crypto/fipsmodule/x86_64-mont.S
      cbits/mac-x86_64/crypto/fipsmodule/x86_64-mont5.S
      cbits/src/crypto/curve25519/asm/x25519-asm-x86_64.S
  if os(windows) && arch(x86)
    c-sources:
      cbits/win-x86/crypto/chacha/chacha-x86.asm
      cbits/win-x86/crypto/fipsmodule/aes-586.asm
      cbits/win-x86/crypto/fipsmodule/aesni-x86.asm
      cbits/win-x86/crypto/fipsmodule/bn-586.asm
      cbits/win-x86/crypto/fipsmodule/co-586.asm
      cbits/win-x86/crypto/fipsmodule/ghash-x86.asm
      cbits/win-x86/crypto/fipsmodule/md5-586.asm
      cbits/win-x86/crypto/fipsmodule/sha1-586.asm
      cbits/win-x86/crypto/fipsmodule/sha256-586.asm
      cbits/win-x86/crypto/fipsmodule/sha512-586.asm
      cbits/win-x86/crypto/fipsmodule/vpaes-x86.asm
      cbits/win-x86/crypto/fipsmodule/x86-mont.asm
  if os(windows) && arch(x86_64)
    c-sources:
      cbits/win-x86_64/crypto/chacha/chacha-x86_64.asm
      cbits/win-x86_64/crypto/cipher_extra/aes128gcmsiv-x86_64.asm
      cbits/win-x86_64/crypto/cipher_extra/chacha20_poly1305_x86_64.asm
      cbits/win-x86_64/crypto/fipsmodule/aes-x86_64.asm
      cbits/win-x86_64/crypto/fipsmodule/aesni-gcm-x86_64.asm
      cbits/win-x86_64/crypto/fipsmodule/aesni-x86_64.asm
      cbits/win-x86_64/crypto/fipsmodule/bsaes-x86_64.asm
      cbits/win-x86_64/crypto/fipsmodule/ghash-x86_64.asm
      cbits/win-x86_64/crypto/fipsmodule/md5-x86_64.asm
      cbits/win-x86_64/crypto/fipsmodule/p256-x86_64-asm.asm
      cbits/win-x86_64/crypto/fipsmodule/rdrand-x86_64.asm
      cbits/win-x86_64/crypto/fipsmodule/rsaz-avx2.asm
      cbits/win-x86_64/crypto/fipsmodule/sha1-x86_64.asm
      cbits/win-x86_64/crypto/fipsmodule/sha256-x86_64.asm
      cbits/win-x86_64/crypto/fipsmodule/sha512-x86_64.asm
      cbits/win-x86_64/crypto/fipsmodule/vpaes-x86_64.asm
      cbits/win-x86_64/crypto/fipsmodule/x86_64-mont.asm
      cbits/win-x86_64/crypto/fipsmodule/x86_64-mont5.asm

test-suite boring-crypto-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             tests.hs
  ghc-options:         -Wall -O2
  other-modules:       Crypto.Boring.Test.Symmetric
                       Crypto.Boring.Test.Random
                       Crypto.Boring.Test.TestVectors
                       Crypto.Boring.Test.Digest
  default-language:    Haskell2010
  build-depends:       base,
                       boring-crypto,
                       tasty,
                       QuickCheck,
                       tasty-quickcheck,
                       tasty-hunit,
                       bytestring,
                       tagged,
                       conduit,
                       megaparsec,
                       path
  default-extensions:  TemplateHaskell
                       FlexibleContexts
                       OverloadedStrings
                       QuasiQuotes
                       ScopedTypeVariables
                       TypeApplications
                       KindSignatures
                       DataKinds
                       LambdaCase
                       TypeFamilies
                       MultiWayIf

executable update-cbits
  main-is:             update-cbits.hs
  default-language:    Haskell2010
  build-depends:       base,
                       path,
                       path-io,
                       unix,
                       process,
                       megaparsec,
                       bytestring
  ghc-options:         -Wall
  buildable: False